# pygrappa

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  INSTALLATION.rst  LICENSE  MANIFEST.in  README.md  README.rst  dev-requirements.txt  grappa.py  grappa_ref.py  make_cython.sh  make_release.sh  make_setup.py  meson.build  patch_mesonpep517.py  phantom.npy  pyproject.toml  requirements.txt  setup.py  setup_cython.py  setup_helpers.py
.github/workflows/: build-python-package.yml  github-deploy.yml  pypi-publish.yml  ubuntu-latest.yml
benchmarks/: benchmark.py
cgrappa/: cgrappa.pyx  get_sampling_patterns.cpp  grappa_in_c.cpp  grappa_in_c.h  setup.py  test.py
docs/: cgrappa.rst  cgsense.rst  conf.py  gfactor.rst  grappa.rst  grappaop.rst  grog.rst  hpgrappa.rst  igrappa.rst  index.rst  installation.rst  mdgrappa.rst  nlgrappa_matlab.rst  pars.rst  pygrappa.rst  radialgrappaop.rst  references.rst  seggrappa.rst  sense1d.rst  slicegrappa.rst  splitslicegrappa.rst  tgrappa.rst  ttgrappa.rst  usage.rst  windows_installation.rst
examples/: basic.py  basic_cgrappa.py  basic_grappa.py  basic_grappaop.py  basic_gridding.py  basic_hpgrappa.py  basic_igrappa.py  basic_ktblast.py  basic_like.py  basic_ncgrappa.py  basic_slicegrappa.py  basic_splitslicegrappa.py  basic_tgrappa.py  basic_ttgrappa.py  idft2d.py  segmented_grappa.py  use_memmap.py
pygrappa/: __init__.py  cgsense.py  coils.py  espirit.py  find_acs.py  gfactor.py  grappa.py  grappa3d.py  grappaop.py  grog.py  hpgrappa.py  igrappa.py  kernels.py  kspa.py  ktblast.py  like.py  lustig_grappa.py  mdgrappa.py  meson.build  ncgrappa.py  nlgrappa.py  nlgrappa_matlab.py  pars.py  pruno.py  pygrappa.py  radialgrappaop.py  run_tests.py  seggrappa.py  sense1d.py  simple_pruno.py  slicegrappa.py  splitslicegrappa.py  tgrappa.py  ttgrappa.py  vcgrappa.py
pygrappa/benchmarks/: meson.build  run_all_examples.sh
pygrappa/examples/: bart_kspa.py  bart_pars.py  basic_cgrappa.py  basic_cgsense.py  basic_espirit.py  basic_gfactor.py  basic_grappa.py  basic_grappaop.py  basic_gridding.py  basic_grog.py  basic_hpgrappa.py  basic_igrappa.py  basic_mdgrappa.py  basic_ncgrappa.py  basic_nlgrappa.py  basic_nlgrappa_matlab.py  basic_pars.py  basic_radialgrappaop.py  basic_seggrappa.py  basic_sense1d.py  basic_slicegrappa.py  basic_splitslicegrappa.py  basic_tgrappa.py  basic_ttgrappa.py  basic_vcgrappa.py  compare_sgd.py  inverse_grog.py  md_cgsense.py  meson.build  primefac_grog.py  primefac_grog_cardiac.py  tikhonov_regularization.py  use_memmap.py
pygrappa/src/: _grog_powers_template.cpp  _grog_powers_template.h  get_sampling_patterns.cpp  get_sampling_patterns.h  grog_gridding.pyx  meson.build
pygrappa/tests/: helpers.py  meson.build  test_cgrappa.py  test_cgsense.py  test_grappa.py  test_hpgrappa.py  test_igrappa.py  test_mdgrappa.py  test_vcgrappa.py
pygrappa/utils/: cythoner.py  disjoint_csm.py  gaussian_csm.py  gridder.py  meson.build
src/: __init__.py  _cgrappa.cpp  _cgrappa.hpp  _cgrappa_interface.cpp  _cgrappa_interface.pyx  cgrappa.cpp  cgrappa.pyx  dft.cpp  dft.pyx  get_sampling_patterns.cpp  get_sampling_patterns.h  grog_gridding.cpp  grog_gridding.pyx  grog_powers.cpp  grog_powers.pyx  train_kernels.cpp  train_kernels.pyx
tests/: benchmark.py  test_basic_recon.py  test_nonsquare_matrix_size.py  test_validP_issue.py
utils/: __init__.py  csm.py  disjoint_csm.py  findRectangle2d.py  find_acs.py  gaussian_csm.py  gen_lstsq.py  gridder.py  kernels.py
