[build-system]
requires = ["meson", "ninja", "Cython", "numpy", "scipy", "mesonpep517"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author = "Nicholas McKibben"
author-email = "nicholas.bgp@gmail.com"
home-page = "https://github.com/mckib2/pygrappa"
summary = "GeneRalized Autocalibrating Partially Parallel Acquisitions."

[project]
name = "pygrappa"
description = "GeneRalized Autocalibrating Partially Parallel Acquisitions."
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["mri", "grappa", "sense"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "tqdm",
]
version = "0.26.0"

[project.optional-dependencies]
test = ["pytest"]
examples = ["matplotlib", "phantominator"]
