py3.install_sources([
    '__init__.py',
    #'bart_kspa.py',
    'bart_pars.py',
    'basic_cgrappa.py',
    'basic_cgsense.py',
    'basic_gfactor.py',
    'basic_grappa.py',
    'basic_grappaop.py',
    'basic_gridding.py',
    'basic_hpgrappa.py',
    'basic_igrappa.py',
    'basic_mdgrappa.py',
    #'basic_ncgrappa.py',
    #'basic_nlgrappa.py',
    'basic_nlgrappa_matlab.py',
    #'basic_pars.py',
    'basic_radialgrappaop.py',
    'basic_seggrappa.py',
    'basic_sense1d.py',
    'basic_slicegrappa.py',
    'basic_splitslicegrappa.py',
    'basic_tgrappa.py',
    'basic_ttgrappa.py',
    'basic_vcgrappa.py',
    'inverse_grog.py',
    'md_cgsense.py',
    'primefac_grog.py',
    #'primefac_grog_cardiac.py',
    'tikhonov_regularization.py',
    'use_memmap.py'
  ],
  subdir: 'pygrappa/examples'
)
